# FaultSimulator

./: .gitignore  CMakeLists.txt  README.md
config/: DDR4_4Gb_x16_2666.ini  DDR4_4Gb_x4_2666.ini  DDR4_4Gb_x8_2666.ini  DDR4_8Gb_x16_2666.ini  DDR4_8Gb_x4_2666.ini  DDR4_8Gb_x8_2666.ini
src/: common.cc  common.h  configuration.cc  configuration.h  faultmap.cc  faultmap.h  faultmodel.cc  faultmodel.h  faultresult.cc  faultresult.h  faulttrace.cc  faulttrace.h  generator.cc  generator.h  main.cc  memory_system.cc  memory_system.h  sighandler.cc  sighandler.h  stat.cc  stat.h
